--- a/app/src/main/res/layout/Splash.xml
+++ b/app/src/main/res/layout/Splash.xml
@@ -3,12 +3,21 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Splash">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Splash"
+    android:background="#ffff7e0d">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:text="DinoRPG Skills" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="45sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:textSize="45sp" />
+        android:src="@drawable/logoClean1k" />
 
 </RelativeLayout>
